@@ -1,4 +1,5 @@
 == 0.6.3 / 2009-03-10
 
-* 1 major enhancement
+* enhancements
   * Started using bones to help manage this mess. History.txt is born!
+  * crc32 takes an optional filename argument as first arg
